Fix top and bottom spacing for overall page layout

--- a/styling/main.css
+++ b/styling/main.css
@@ -7,3 +7,7 @@ body {
     font-size: 17px;
     background-color: #eee;
 }
+
+#pageContent {
+    padding-bottom: 2%;
+}
