--- a/styling/sidebar.css
+++ b/styling/sidebar.css
@@ -4,7 +4,7 @@
 #sidebar {
     position: sticky; /* this works trust me */
     position: -webkit-sticky;
-    top: 75px;
+    top: 95px;
     height: calc(100vh - 50px);
     width: 100%;
     margin: 25px;
